--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -56,6 +56,20 @@
                 android:text="Instructions"
                 android:textSize="14sp"
                 android:padding="8dp" />
+
+            <Button
+                android:id="@+id/deleteRecipeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="@color/red"
+                android:padding="8dp"
+                android:text="Удалить"
+                android:textColor="@android:color/white"
+                android:elevation="4dp"
+                android:stateListAnimator="@null" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
