--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -70,6 +70,15 @@
                 android:textColor="@android:color/white"
                 android:elevation="4dp"
                 android:stateListAnimator="@null" />
+
+            <Button
+                android:id="@+id/editRecipeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Редактировать рецепт"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"/>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
