--- a/app/src/main/res/layout/activity_edit_recipe.xml
+++ b/app/src/main/res/layout/activity_edit_recipe.xml
@@ -1,49 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    android:background="@color/lightGrey">
 
     <EditText
         android:id="@+id/editTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Title" />
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edittext_bg"
+        android:hint="Название"
+        android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/darkGrey" />
 
     <EditText
         android:id="@+id/editDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/editTitle"
-        android:hint="Description" />
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edittext_bg"
+        android:hint="Описание"
+        android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/darkGrey" />
 
     <EditText
         android:id="@+id/editIngredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/editDescription"
-        android:hint="Ingredients" />
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edittext_bg"
+        android:hint="Ингредиенты"
+        android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/darkGrey" />
 
     <EditText
         android:id="@+id/editInstructions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/editIngredients"
-        android:hint="Instructions" />
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edittext_bg"
+        android:hint="Инструкции"
+        android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/darkGrey" />
 
-    <Button
-        android:id="@+id/saveChangesButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_below="@id/editInstructions"
-        android:layout_centerHorizontal="true"
-        android:text="Save Changes" />
+        android:gravity="center_horizontal">
 
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/saveChangesButton"
-        android:layout_centerHorizontal="true"
-        android:text="Back" />
+        <Button
+            android:id="@+id/saveChangesButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Сохранить изменения"
+            android:backgroundTint="@color/blue"
+            android:textColor="@android:color/white"
+            android:padding="12dp"
+            android:layout_marginEnd="8dp"/>
 
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Назад"
+            android:backgroundTint="@color/red"
+            android:textColor="@android:color/white"
+            android:padding="12dp"
+            android:layout_marginStart="8dp"/>
+    </LinearLayout>
 </RelativeLayout>
