--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeDetailActivity">
+    tools:context=".RecipeDetailActivity"
+    android:background="@color/lightGrey">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,56 +30,73 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Recipe Title"
-                android:textSize="18sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
-                android:padding="8dp" />
+                android:padding="16dp"
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/descriptionTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Recipe Description"
-                android:textSize="14sp"
-                android:padding="8dp" />
+                android:textSize="16sp"
+                android:padding="16dp"
+                android:textColor="@color/darkGrey" />
 
             <TextView
                 android:id="@+id/ingredientsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ingredients"
-                android:textSize="14sp"
-                android:padding="8dp" />
+                android:textSize="16sp"
+                android:padding="16dp"
+                android:textColor="@color/darkGrey" />
 
             <TextView
                 android:id="@+id/instructionsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Instructions"
-                android:textSize="14sp"
-                android:padding="8dp" />
+                android:textSize="16sp"
+                android:padding="16dp"
+                android:textColor="@color/darkGrey" />
 
-            <Button
-                android:id="@+id/deleteRecipeButton"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="16dp"
-                android:backgroundTint="@color/red"
-                android:padding="8dp"
-                android:text="Удалить"
-                android:textColor="@android:color/white"
-                android:elevation="4dp"
-                android:stateListAnimator="@null" />
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/editRecipeButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Редактировать рецепт"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="16dp"/>
+                <Button
+                    android:id="@+id/deleteRecipeButton"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/red"
+                    android:padding="12dp"
+                    android:text="Удалить"
+                    android:textColor="@android:color/white"
+                    android:elevation="4dp"
+                    android:stateListAnimator="@null" />
+
+                <Button
+                    android:id="@+id/editRecipeButton"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/blue"
+                    android:padding="12dp"
+                    android:text="Редактировать"
+                    android:textColor="@android:color/white"
+                    android:elevation="4dp"
+                    android:stateListAnimator="@null" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
