--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="blue">#2196F3</color>
+    <color name="grey">#CCCCCC</color>
+    <color name="lightGrey">#ECEFF1</color>
+    <color name="green">#36C536</color>
+    <color name="softBlue">#87CEEB</color>
+    <color name="darkGrey">#666666</color>
 </resources>
