--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -6,13 +6,26 @@
     android:background="@color/lightGrey"
     android:layout_height="match_parent">
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@color/lightGrey">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#6F47B0BD"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:title="Добавление рецепта"
+        android:layout_marginBottom="10dp"
+        app:navigationIcon="?android:attr/homeAsUpIndicator"
+        app:titleTextColor="@color/white"
+        app:contentInsetStartWithNavigation="100dp"
+        android:layout_gravity="top" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
