--- a/app/src/main/res/layout/activity_edit_recipe.xml
+++ b/app/src/main/res/layout/activity_edit_recipe.xml
@@ -11,8 +11,22 @@
     android:padding="16dp"
     android:background="@color/lightGrey">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/recipeImageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_recipe_image" />
+
     <EditText
         android:id="@+id/editTitle"
+        android:layout_marginTop="16dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -84,6 +98,7 @@
             android:textColor="@android:color/white"
             android:padding="12dp"
             android:layout_marginStart="8dp"/>
+    </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
 </ScrollView>
