--- a/app/src/main/res/layout/activity_edit_recipe.xml
+++ b/app/src/main/res/layout/activity_edit_recipe.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@color/lightGrey"
+    android:id="@+id/scroll1"
     android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -22,11 +23,20 @@
             android:layout_height="200dp"
             android:scaleType="centerCrop"
             android:src="@drawable/default_recipe_image" />
+        <Button
+            android:id="@+id/attachImageButton"
+            android:layout_marginTop="16dp"
+            android:layout_width="253dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical"
+            android:layout_marginStart="8dp"
+            android:backgroundTint="@color/softBlue"
+            android:text="Изменить изображение"
+            android:textColor="@android:color/white" />
 
     <EditText
         android:id="@+id/editTitle"
         android:layout_marginTop="16dp"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
